make vmn installable

--- a/meson.build
+++ b/meson.build
@@ -3,4 +3,4 @@ libconfig = dependency('libconfig')
 menu = dependency('menu')
 mpv = dependency('mpv')
 ncurses = dependency('ncurses')
-executable('vmn', 'main.c', dependencies: [libconfig, menu, mpv, ncurses])
+executable('vmn', 'main.c', dependencies: [libconfig, menu, mpv, ncurses], install: true)
