move configure functions to separate file and header

--- a/meson.build
+++ b/meson.build
@@ -3,4 +3,7 @@ libconfig = dependency('libconfig')
 menu = dependency('menu')
 mpv = dependency('mpv')
 ncurses = dependency('ncurses')
-executable('vmn', 'main.c', dependencies: [libconfig, menu, mpv, ncurses], install: true)
+subdir('include')
+inc =  include_directories('include')
+vmn_sources = files('main.c', 'config.c')
+executable('vmn', vmn_sources, dependencies: [libconfig, menu, mpv, ncurses], include_directories: inc, install: true)
