store paths in internal vmn_library structure

--- a/meson.build
+++ b/meson.build
@@ -5,5 +5,5 @@ mpv = dependency('mpv')
 ncurses = dependency('ncurses')
 subdir('include')
 inc =  include_directories('include')
-vmn_sources = files('main.c', 'config.c')
+vmn_sources = files('main.c', 'config.c', 'library.c')
 executable('vmn', vmn_sources, dependencies: [libconfig, menu, mpv, ncurses], include_directories: inc, install: true)
