add some preliminary work for metadata

--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,6 @@
 project('vmn', 'c')
+libavformat = dependency('libavformat')
+libavutil = dependency('libavutil')
 libconfig = dependency('libconfig')
 menu = dependency('menu')
 mpv = dependency('mpv')
@@ -6,4 +8,4 @@ ncurses = dependency('ncurses')
 subdir('include')
 inc =  include_directories('include')
 vmn_sources = files('main.c', 'config.c', 'library.c')
-executable('vmn', vmn_sources, dependencies: [libconfig, menu, mpv, ncurses], include_directories: inc, install: true)
+executable('vmn', vmn_sources, dependencies: [libavformat, libavutil, libconfig, menu, mpv, ncurses], include_directories: inc, install: true)
