add bash completions

--- a/meson.build
+++ b/meson.build
@@ -6,6 +6,11 @@ menu = dependency('menu')
 mpv = dependency('mpv')
 ncurses = dependency('ncurses')
 datadir = get_option('datadir')
+if (get_option('bash-completions'))
+  bash_files = files('completions/bash/vmn')
+  bash_install_dir = datadir + '/bash-completion/completions'
+  install_data(bash_files, install_dir: bash_install_dir)
+endif
 if (get_option('zsh-completions'))
   zsh_files = files('completions/zsh/_vmn')
   zsh_install_dir = datadir + '/zsh/site-functions'
