--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,2 +1,3 @@
 option('bash-completions', type: 'boolean', value: true, description: 'Install with bash completions.')
 option('zsh-completions', type: 'boolean', value: true, description: 'Install with zsh completions.')
+option('man-pages', type: 'feature', value: 'auto', description: 'Create and install manpages.')
