--- a/meson.build
+++ b/meson.build
@@ -5,6 +5,7 @@ libconfig = dependency('libconfig')
 menu = dependency('menu')
 mpv = dependency('mpv')
 ncurses = dependency('ncurses')
+
 datadir = get_option('datadir')
 if (get_option('bash-completions'))
   bash_files = files('completions/bash/vmn')
@@ -16,6 +17,30 @@ if (get_option('zsh-completions'))
   zsh_install_dir = datadir + '/zsh/site-functions'
   install_data(zsh_files, install_dir: zsh_install_dir)
 endif
+
+scdoc = find_program('scdoc', required: get_option('man-pages'))
+if scdoc.found()
+  sh = find_program('sh')
+  mandir = get_option('mandir')
+  man_files = ['vmn.1.scd']
+  foreach filename : man_files
+		topic = filename.split('.')[-3].split('/')[-1]
+		section = filename.split('.')[-2]
+		output = '@0@.@1@'.format(topic, section)
+
+		custom_target(
+			output,
+			input: filename,
+			output: output,
+			command: [
+				sh, '-c', '@0@ < @INPUT@ > @1@'.format(scdoc.path(), output)
+			],
+			install: true,
+			install_dir: '@0@/man@1@'.format(mandir, section)
+		)
+  endforeach
+endif
+
 subdir('include')
 inc =  include_directories('include')
 vmn_sources = files('main.c', 'config.c', 'library.c')
