replace libconfig with internal config file parser
Technically a breaking change. The decision to move to an internal
config file parser was made in order to have better compatibility with
mpv syntax. Now config file options no longer use quotes around them,
but instead match the foo=value style of mpv. In this implementation,
putting quotes around option values with spaces is not needed which is
the sole syntax difference with mpv. I may change that detail later to
reach 100% compatibility. Also a couple of options (mpv_cfg and
mpv_cfg_dir) were removed since they no longer make any sense.
Technically, the functionality is still available via mpv's options
(config and config-dir respectively).

--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,6 @@
 project('vmn', 'c')
 libavformat = dependency('libavformat')
 libavutil = dependency('libavutil')
-libconfig = dependency('libconfig')
 menu = dependency('menu')
 mpv = dependency('mpv')
 ncurses = dependency('ncurses')
@@ -44,4 +43,4 @@ endif
 subdir('include')
 inc =  include_directories('include')
 vmn_sources = files('src/command.c', 'src/config.c', 'src/library.c', 'src/main.c', 'src/utils.c')
-executable('vmn', vmn_sources, dependencies: [libavformat, libavutil, libconfig, menu, mpv, ncurses], include_directories: inc, install: true)
+executable('vmn', vmn_sources, dependencies: [libavformat, libavutil, menu, mpv, ncurses], include_directories: inc, install: true)
