move some curses rendering stuff to separate file
Not really complicated enough to be called a "refactor" but it's nice to
move some of the curses related function out of main into separate
files. We can easily add more general curses stuff here in the future.

--- a/meson.build
+++ b/meson.build
@@ -42,5 +42,10 @@ endif
 
 subdir('include')
 inc =  include_directories('include')
-vmn_sources = files('src/command.c', 'src/config.c', 'src/library.c', 'src/main.c', 'src/utils.c')
+vmn_sources = files('src/command.c',
+		  			'src/config.c',
+					'src/library.c',
+					'src/main.c',
+					'src/render.c',
+					'src/utils.c')
 executable('vmn', vmn_sources, dependencies: [libavformat, libavutil, menu, mpv, ncurses], include_directories: inc, install: true)
