build: use -Wno-format-security
GCC will complain otherwise and fail because of curses printing
functions.

--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,8 @@
 project('vmn', 'c')
+
+cc = meson.get_compiler('c')
+add_project_arguments(cc.get_supported_arguments('-Wno-format-security'), language: 'c')
+
 libavformat = dependency('libavformat')
 libavutil = dependency('libavutil')
 menu = dependency('menu')
